--- a/thrift/src/main/resources/ThriftBundle.properties
+++ b/thrift/src/main/resources/ThriftBundle.properties
@@ -1,5 +1,6 @@
 thrift.name=Thrift
 thrift.description=Thrift interface definition
+thrift.inspection.deprecated=Deprecated
 thrift.inspection.duplicates.top_level_declaration=Top level declaration duplicates
 thrift.inspection.duplicates.id=ID duplicates
 thrift.inspection.duplicates.name=Name duplicates
