--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
-ideaVersion = 2021.3
-sources = true
-isEAP = false
+ideaVersion=2022.1
+ideaSinceVersion=212.4746.92
+sources=true
+isEAP=false
 
 org.gradle.daemon=true
 org.gradle.caching=true
